# frontend-analyzer-provider

./: Cargo.toml  README.md  open-issues.md
.forgejo/workflows/: ci.yml  release.yml
crates/core/: Cargo.toml
crates/core/src/: capabilities.rs  fix.rs  lib.rs  rules.rs
crates/css-scanner/: Cargo.toml
crates/css-scanner/src/: lib.rs  scanner.rs
crates/fix-engine/: Cargo.toml
crates/fix-engine/src/: engine.rs  goose_client.rs
crates/grpc/: Cargo.toml
crates/grpc/src/: code_snip.rs  evaluate.rs  lib.rs  server.rs  service.rs
crates/js-scanner/: Cargo.toml
crates/js-scanner/src/: classnames.rs  function_calls.rs  jsx.rs  lib.rs  scanner.rs  type_refs.rs
crates/patternfly-fix-context/: Cargo.toml
docs/: rule-authoring-guide.md
hack/: compare-against-release.sh  run-full-migration.sh  show-migration-gaps.sh
rules/patternfly-v5-to-v6/: 01-component-renames.yaml  02-component-removals.yaml  02-css-class-changes.yaml  03-accessibility-changes.yaml  03-prop-renames.yaml  05-prop-value-changes.yaml  06-dom-structure-changes.yaml  07-behavioral-changes.yaml  10-misc-changes.yaml  fix-strategies.json
src/: fix_engine.rs  goose_client.rs  main.rs
src/cli/: fix.rs  mod.rs  serve.rs
