[package]
name = "frontend-fix-engine"
version = "0.0.2"
edition = "2021"
description = "Fix engine for applying pattern-based and LLM-assisted code migration fixes"
license = "Apache-2.0"
repository = "https://forge.hurley.page/shawn_hurley/frontend-analyzer-provider"

[dependencies]
frontend-core = { version = "0.0.2", path = "../core" }
konveyor-core = "0.0.1"

# Error handling
anyhow = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client (for LLM endpoint)
reqwest = { version = "0.12", features = ["json"] }

# Utilities
regex = "1"

# Logging
tracing = "0.1"

# Unix process management (process group cleanup for goose subprocess)
[target.'cfg(unix)'.dependencies]
libc = "0.2"
