[package]
name = "frontend-grpc"
version = "0.1.0"
edition = "2021"
description = "Konveyor gRPC provider interface for frontend-analyzer-provider"

[features]
generate-proto = ["dep:tonic-build", "dep:dlprotoc"]

[dependencies]
frontend-core = { path = "../core" }
frontend-js-scanner = { path = "../js-scanner" }
frontend-css-scanner = { path = "../css-scanner" }

# gRPC
tonic = "0.13"
prost = "0.13"
prost-types = "0.13"
tonic-reflection = "0.13"

# Async
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures-core = "0.3"
async-stream = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "=0.0.12"

# Error handling
anyhow = "1"

# Utilities
regex = "1"
url = "2"

# Logging
tracing = "0.1"

[build-dependencies]
tonic-build = { version = "0.13", optional = true }
dlprotoc = { version = "0.4", optional = true }
